# genro-scriba

./: .gitignore  CLAUDE.md  NOTICE  PLAN.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: article_infrastructure_as_python.md  conf.py  getting-started.md  index.md
docs/reference/: artifact-hub.rst  scriba-app.rst  yaml-compiler.rst
examples/dual_infra/: docker-compose.yml  dual_infra.py  traefik.yml
src/genro_scriba/: __init__.py  app.py  artifact_hub.py  compiler_base.py  yaml_compiler.py
tests/: test_artifact_hub.py  test_scriba_app.py
